# pandaSDMX

./: .coveragerc  .gitignore  .hgtags  .readthedocs.yml  .travis.yml  AUTHORS  ChangeLog.rst  MANIFEST.in  NOTES.rst  README.md  README.rst  RELEASING  ToDo.rst  Untitled 1  changelog.txt  demo.py  description.rst  http_cache.sqlite  nginx_test_server  pandasdmx.py  pyproject.toml  pysdmx.py  pytest.ini  requirements.blocked  requirements.txt  sandbox.py  sdmx.py  setup.cfg  setup.py  t  test.py
.github/workflows/: python-package.yml
doc/: Makefile  README.txt  ToDo.rst  advanced.rst  agencies.rst  api.rst  api_readers.rst  conf.py  contributing.rst  example.rst  faq.rst  glossary.rst  howto.rst  http_cache.sqlite  im.rst  implementation.rst  index.rst  install.rst  intro.rst  license.rst  make.bat  overview.rst  requirements.txt  resources.rst  roadmap.rst  saved_message.xml  sdmx_tour.rst  sources.rst  usage.rst  walkthrough.rst  whatsnew.rst
doc/api/: modules.rst  pandasdmx.reader.rst  pandasdmx.rst  pandasdmx.utils.rst  pandasdmx.writer.rst
doc/source/: conf.py  index.rst  intro.rst  quickstart.rst  usage.rst
doc/source/api/: pandasdmx.reader.rst  pandasdmx.rst  pandasdmx.tests.rst
examples/: categoryscheme.py  dataflows.py  estat_milk.py  generic_data.py
pandasdmx/: __init__.py  agencies.json  agency.py  api.py  application.py  client.py  dataset.py  exceptions.py  experimental.py  message.py  model.py  query.py  remote.py  request.py  resource.py  sources.json  storage.py  urn.py  util.py  utils.py  wrapper.py  writer.py
pandasdmx/format/: __init__.py  json.py  protobuf_pb2.py  xml.py
pandasdmx/reader/: __init__.py  base.py  common.py  null.py  sdmxjson.py  sdmxml.py
pandasdmx/source/: __init__.py  abs.py  ec_base.py  ec_comp.py  ec_empl.py  ec_grow.py  estat.py  ilo.py  insee.py  istat.py  lsd.py  sgr.py  wb.py
pandasdmx/tests/: __init__.py  conftest.py  test_api.py  test_compat.py  test_dataset.py  test_dataset_bare.py  test_dataset_ss.py  test_docs.py  test_dsd.py  test_experimental.py  test_insee.py  test_message.py  test_model.py  test_performance.py  test_reader_json.py  test_reader_xml.py  test_remote.py  test_request.py  test_source.py  test_sources.py  test_structspec_dataset.py  test_urls.py  test_util.py  test_utils.py  test_writer.py
pandasdmx/tests/data/: __init__.py  expected.json
pandasdmx/tests/data/ECB_EXR/: common.xml  flat.json  ng-flat-ss.xml  ng-flat.xml  ng-ts-gf-ss.xml  ng-ts-gf.xml  ng-ts-ss.xml  ng-ts.xml  ng-xs-ss.xml  ng-xs.xml  rg-flat.xml  rg-structure.xml  rg-ts-gf.xml  rg-ts.xml  rg-xs-ss.xml  rg-xs.xml  sg-flat.xml  sg-structure-full.xml  sg-ts-gf-ss.xml  sg-ts-gf.xml  sg-ts.xml  sg-xs.xml  ts.json
pandasdmx/tests/data/ESTAT/: demography-structure.xml
pandasdmx/tests/data/IMF/: ECOFIN_DSD-structure.xml
pandasdmx/tests/data/INSEE/: CNA-2010-CONSO-SI-A17-structure.xml  dataflow.xml
pandasdmx/tests/data/UNSD/: codelist_partial.xml
pandasdmx/tests/data/common/: common.xml
pandasdmx/tests/data/demography/: esms.xml  esms.xsd  esms_structured.xml
pandasdmx/tests/data/estat/: apro_dsd.xml  footer.xml
pandasdmx/tests/data/expected/: ecb_exr_ng_ts_gf.txt  exr-action-delete.txt  exr-flat.txt  exr-time-series.txt  ng-xs-xml.txt
pandasdmx/tests/data/insee/: bug-data-namedtuple.xml  insee-IPI-2010-A21-data.xml  insee-IPI-2010-A21-datastructure.xml
pandasdmx/tests/data/json/: exr-action-delete.json
pandasdmx/tests/format/: test_xml.py
pandasdmx/tests/reader/: test_json.py  test_reader_xml.py
pandasdmx/tests/writer/: conftest.py  test_pandas.py  test_protobuf.py  test_writer_xml.py
pandasdmx/utils/: __init__.py  aadict.py  anynamedtuple.py
pandasdmx/writer/: __init__.py  base.py  common.py  data2pandas.py  pandas.py  protobuf.py  structure2pd.py  xml.py
tests/: __init__.py  conftest.py  excluded_test_structspec_dataset.py  pytest_travis.py  test_agencies.py  test_api.py  test_core.py  test_dataset.py  test_dataset_bare.py  test_docs.py  test_dsd.py  test_experimental.py  test_insee.py  test_json.py  test_message.py  test_model.py  test_performance.py  test_reader_json.py  test_reader_xml.py  test_remote.py  test_request.py  test_source.py  test_sources.py  test_structspec_dataset.py  test_util.py  test_utils.py  test_writer.py  test_writer_d2p.py  test_writer_s2p.py  test_writer_structure2pd.py
tests/agencies/: __init__.py  test_unsd.py
tests/data/: expected.json
tests/data/common/: common.xml  ecb_orgscheme.xml  sdmx_common.xsd  unsd_codelist_partial.xml  unsd_partial.xml
tests/data/demography/: demography_xs.xml  demography_xs_ex.xsd  esms_generic.xml
tests/data/demography/xhtml/: xhtml-attribs-1.xsd  xhtml-basic-table-1.xsd  xhtml-basic10.xsd  xhtml-bdo-1.xsd  xhtml-blkstruct-1.xsd  xhtml-copyright-1.xsd  xhtml-events-1.xsd  xhtml-framework-1.xsd  xhtml-hypertext-1.xsd  xhtml-image-1.xsd  xhtml-inlstruct-1.xsd  (+7 more)
tests/data/estat/: footer2.xml
tests/data/expected/: ecb_exr_ng_flat.txt  exr-cross-section.txt  exr-time-series.txt
tests/data/insee/: insee-IPI-2010-A21-data.xml  insee-bug-data-namedtuple.xml  insee-bug-series-freq-data.xml
tests/data/json/: exr-action-delete.json  exr-cross-section.json  exr-time-series.json
(+60 files in other folders)
