[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pandasdmx"
author = "dr-leo"
author-email = "fhaxbox66@gmail.com"
home-page = "https://github.com/dr-leo/pandasdmx"
dist-name = "pandaSDMX"
description-file = "README.rst"
requires = [
    "requests >=2.26",
    "lxml >= 4.8",
    "pandas >= 1.3",
    "pydantic >=1.9.2, < 2.0"]
requires-python = ">=3.9.6,<3.12"
keywords = "statistics, SDMX, pandas, data, economics, science"
classifiers = [
"Intended Audience :: Developers",
"Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
"Development Status :: 4 - Beta",
"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
"License :: OSI Approved :: Apache Software License"]

[tool.flit.metadata.requires-extra]  
cache = ["requests_cache >= 0.9.5"]
schema = ["appdirs >= 1.4"]
doc = ["sphinx >= 5.2", 
"IPython >= 7.20"]
test = ["pytest >= 5", 
"requests-mock >= 1.4"]

[tool.flit.metadata.urls]
    Homepage = "https://pandasdmx.readthedocs.io/en/latest/"

[tool.flit.sdist]
include = ["LICENSE", 'README.rst']
exclude = ['pandasdmx/tests']