[sdist]
formats = gztar

[build_sphinx]
source-dir = doc/
build-dir  = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=1

[metadata]
description-file = README.rst

[tool:pytest]
norecursedirs = .* doc build doc examples wheel
testpaths = tests
