[sdist]
formats = gztar

[build_sphinx]
source-dir = doc/
build-dir  = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=1

[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst

[tool:pytest]
norecursedirs = .* doc build doc examples wheel
testpaths = tests
