[metadata]
name = pandaSDMX
author = pandaSDMX developers
author_email = fhaxbox66@gmail.com
description = Statistical Data and Metadata eXchange (SDMX) for Python & pandas
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = statistics, SDMX, pandas, data, economics, science
project_urls =
    Documentation = https://pandasdmx.readthedocs.io/en/latest
url = https://github.com/dr-leo/pandasdmx
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = pandasdmx
zip_safe = True
python_requires = >= 3.7
install_requires =
    lxml >= 3.6
    pandas >= 1.0
    pydantic >= 1.1
    requests >= 2.7
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
cache = requests_cache
docs = sphinx >= 2.3; IPython
tests = pytest >= 5; pytest-remotedata >= 0.3.1; requests-mock >= 1.4

[options.package_data]
pandasdmx =
    sources.json
    tests/data/**/*

[sdist]
formats = gztar

[build_sphinx]
source-dir = doc/
build-dir  = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=1

[tool:pytest]
testpaths = pandasdmx/tests
